Prevent duplicate transportService entries. Fix local: protocol More sonar fixes